# opnsense-dashboard-cli

./: Cargo.toml  Makefile  README.md  config.yaml.example
src/: config.rs  firewall_logs.rs  gateway.rs  interface.rs  main.rs  opnconfig.rs  service.rs  ssh_exec.rs  version_info.rs
