[package]
name = "opnsense-dashboard"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"

[dependencies]
backtrace = "0.3"
dirs = "3"
roxmltree = { version = "0.14", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
ssh2 = "0.9"
