[package]
name = "opnsense-dashboard"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"

[dependencies]
dirs = { version = "4", default-features = false }
roxmltree = { version = "0.15", default-features = false, features = [
	"std",
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std",
] }
serde_yaml = { version = "0.9", default-features = false }
ssh2 = { version = "0.9", default-features = false }
terminal = { git = "https://github.com/Arnavion/terminal", branch = "main" }
